--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^4.0.0",
     "redux-thunk": "^2.1.0",
-    "superagent": "^2.2.0"
+    "superagent": "^2.2.0",
+    "superagent-auth-bearer": "0.0.1"
   },
   "babel": {
     "presets": [
