feat: add name entry for task list creation

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "babel-preset-stage-2": "^6.13.0",
+    "lodash": "^4.15.0",
     "moment": "^2.14.1",
     "path": "^0.12.7",
     "rc-collapse": "^1.6.6",
