--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-bootstrap": "^0.30.3",
     "react-chartjs-2": "^1.2.4",
     "react-dom": "^15.3.1",
+    "react-grid-layout": "^0.13.5",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-select": "^1.0.0-beta14",
