--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2016": "^6.11.3",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-root-import": "^4.1.3",
     "babel-runtime": "^6.11.6",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.23.1",
