--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "redux-promise-middleware": "^4.0.0",
     "redux-thunk": "^2.1.0",
     "superagent": "^2.2.0",
-    "superagent-auth-bearer": "0.0.1"
+    "superagent-auth-bearer": "0.0.1",
+    "underscore": "^1.8.3"
   },
   "babel": {
     "presets": [
