feat: add "planned for" and "due on" datepickers, adjust task brief styles

--- a/package.json
+++ b/package.json
@@ -42,13 +42,15 @@
   },
   "dependencies": {
     "babel-preset-stage-2": "^6.13.0",
+    "flexbox-react": "^4.0.0",
     "lodash": "^4.15.0",
-    "moment": "^2.14.1",
+    "moment": "^2.15.1",
     "path": "^0.12.7",
     "rc-collapse": "^1.6.6",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
     "react-chartjs-2": "^1.2.4",
+    "react-datepicker": "^0.29.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.3.1",
