--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bundle.js",
   "scripts": {
     "build": "webpack --p --config --production webpack.config.js",
+    "server": "python -m SimpleHTTPServer 8008",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --colors --progress --watch --config --jsx-loader webpack.config.js"
   },
