--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "tiny-two-project-manager",
+  "name": "tiny-two-productivity-manager",
   "version": "1.0.0",
-  "description": "The official project manager of the Tiny Two.",
+  "description": "The official productivity manager of the Tiny Two.",
   "main": "bundle.js",
   "scripts": {
-    "build": "webpack --p --config --production webpack.config.js",
+    "build-dev": "npm run bundle-dev",
+    "build-prod": "npm run test && npm run bundle-prod",
+    "bundle-dev": "webpack --progress",
+    "bundle-prod": "webpack --progress -p",
     "server": "python -m SimpleHTTPServer 8008",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --colors --progress --watch --config --jsx-loader webpack.config.js"
+    "test": "jest",
+    "watch": "webpack --progress --watch"
   },
-  "repository": "",
-  "author": "Jacob Sowles",
+  "repository": "https://github.com/jrsowles/tt-productivity-manager-ui",
+  "author": "Jacob Sowles, Kate Sowles",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
+    "babel-jest": "^16.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2016": "^6.11.3",
-    "babel-preset-react": "^6.11.1",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-root-import": "^4.1.3",
     "babel-runtime": "^6.11.6",
     "bootstrap-sass": "^3.3.7",
+    "concurrently": "^3.1.0",
     "css-loader": "^0.23.1",
     "eslint": "^3.3.1",
     "eslint-config-defaults": "^9.0.0",
@@ -34,8 +39,10 @@
     "eslint-plugin-react": "^6.1.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
+    "jest": "^16.0.1",
     "jsx-loader": "^0.13.2",
     "node-sass": "^3.8.0",
+    "react-test-renderer": "^15.3.2",
     "sass-loader": "^4.0.0",
     "scss": "^0.2.4",
     "style-loader": "^0.13.1",
@@ -67,5 +74,8 @@
     "superagent": "^2.2.0",
     "superagent-auth-bearer": "0.0.1",
     "underscore": "^1.8.3"
+  },
+  "jest": {
+    "testRegex": "(/tests/.*|\\.tests)\\.(js|jsx)$"
   }
 }
