chore: set development environment variable on watch

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bundle-prod": "webpack -p --define process.env.NODE_ENV='\"production\"' --progress",
     "server": "python -m SimpleHTTPServer 8008",
     "test": "BABEL_JEST_STAGE=0 jest || true",
-    "watch": "webpack --progress --watch"
+    "watch": "webpack --define process.env.NODE_ENV='\"development\"' --progress --watch"
   },
   "repository": "https://github.com/jrsowles/tt-productivity-manager-ui",
   "author": "Jacob Sowles, Kate Sowles",
