--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-react": "^6.1.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "jest": "^16.0.1",
     "jest-cli": "^16.0.1",
@@ -78,23 +79,33 @@
   },
   "babel": {
     "plugins": [
-      ["babel-root-import", [{
-        "rootPathPrefix": "~",
-        "rootPathSuffix": "src/components"
-      }, {
-        "rootPathPrefix": "@",
-        "rootPathSuffix": "src"
-      }]]
+      [
+        "babel-root-import",
+        [
+          {
+            "rootPathPrefix": "~",
+            "rootPathSuffix": "src/components"
+          },
+          {
+            "rootPathPrefix": "@",
+            "rootPathSuffix": "src"
+          }
+        ]
+      ]
     ],
     "presets": [
-		  "react",
-		  "es2015",
+      "react",
+      "es2015",
       "stage-0"
-  	]
+    ]
   },
   "jest": {
     "testRegex": "(/tests/.*|\\.tests)\\.(js|jsx)$",
     "scriptPreprocessor": "./node_modules/babel-jest",
-    "moduleFileExtensions": ["js", "json", "es6"]
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "es6"
+    ]
   }
 }
