--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "babel-preset-stage-2": "^6.13.0",
+    "chart.js": "^2.3.0",
     "flexbox-react": "^4.0.0",
     "lodash": "^4.15.0",
     "moment": "^2.15.1",
