--- a/package.json
+++ b/package.json
@@ -77,11 +77,15 @@
     "underscore": "^1.8.3"
   },
   "babel": {
-    "plugins": [[
-        "babel-root-import", [{
+    "plugins": [
+      [
+        "babel-root-import",
+        [
+          {
             "rootPathPrefix": "~",
             "rootPathSuffix": "src/components"
-          }, {
+          },
+          {
             "rootPathPrefix": "@",
             "rootPathSuffix": "src"
           }
