chore: create start script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-prod": "npm run test && npm run bundle-prod",
     "bundle-dev": "webpack --define process.env.NODE_ENV='\"development\"' --progress",
     "bundle-prod": "webpack -p --define process.env.NODE_ENV='\"production\"' --progress",
-    "server": "python -m SimpleHTTPServer 8008",
+    "start": "python -m SimpleHTTPServer 8000",
     "test": "BABEL_JEST_STAGE=0 jest || true",
     "watch": "webpack --define process.env.NODE_ENV='\"development\"' --progress --watch"
   },
