--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-prod": "npm run test && npm run bundle-prod",
     "bundle-dev": "webpack --define process.env.NODE_ENV='\"development\"' --progress",
     "bundle-prod": "webpack -p --define process.env.NODE_ENV='\"production\"' --progress",
-    "start": "python -m SimpleHTTPServer",
+    "start": "node server",
     "test": "BABEL_JEST_STAGE=0 jest || true",
     "watch": "webpack --define process.env.NODE_ENV='\"development\"' --progress --watch"
   },
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "babel-preset-stage-2": "^6.13.0",
+    "connect": "^3.6.0",
     "flexbox-react": "^4.0.0",
     "lodash": "^4.15.0",
     "moment": "^2.15.1",
@@ -73,9 +74,11 @@
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^4.0.0",
     "redux-thunk": "^2.1.0",
+    "serve-static": "^1.12.1",
     "superagent": "^2.2.0",
     "superagent-auth-bearer": "0.0.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "webpack-dev-server": "^2.4.1"
   },
   "babel": {
     "presets": [
