--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2016": "^6.11.3",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.13.0",
     "babel-root-import": "^4.1.3",
     "babel-runtime": "^6.11.6",
     "bootstrap-sass": "^3.3.7",
@@ -49,15 +50,14 @@
     "scss": "^0.2.4",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
+    "webpack-dev-server": "^2.4.1",
     "webpack-livereload-plugin": "^0.8.2"
   },
   "dependencies": {
-    "babel-preset-stage-2": "^6.13.0",
     "connect": "^3.6.0",
     "flexbox-react": "^4.0.0",
     "lodash": "^4.15.0",
     "moment": "^2.15.1",
-    "path": "^0.12.7",
     "rc-collapse": "^1.6.6",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
@@ -77,8 +77,7 @@
     "serve-static": "^1.12.1",
     "superagent": "^2.2.0",
     "superagent-auth-bearer": "0.0.1",
-    "underscore": "^1.8.3",
-    "webpack-dev-server": "^2.4.1"
+    "underscore": "^1.8.3"
   },
   "babel": {
     "presets": [
