--- a/package.json
+++ b/package.json
@@ -60,12 +60,14 @@
     "moment": "^2.15.1",
     "rc-collapse": "^1.6.6",
     "react": "^15.3.1",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-bootstrap": "^0.30.3",
     "react-chartjs-2": "^1.2.4",
     "react-datepicker": "^0.29.0",
+    "react-dd-menu": "^2.0.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.3.1",
+    "react-dom": "^15.5.4",
     "react-grid-layout": "^0.13.5",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
