chore: update to webpack 2

--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-react": "^6.1.2",
-    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "jest": "^16.0.1",
     "jest-cli": "^16.0.1",
@@ -49,7 +48,7 @@
     "sass-loader": "^4.0.0",
     "scss": "^0.2.4",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
+    "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-livereload-plugin": "^0.8.2"
   },
@@ -58,12 +57,15 @@
     "flexbox-react": "^4.0.0",
     "lodash": "^4.15.0",
     "moment": "^2.15.1",
+    "prop-types": "^15.5.8",
     "rc-collapse": "^1.6.6",
-    "react": "^15.3.1",
+    "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-shallow-compare": "^15.5.2",
     "react-bootstrap": "^0.30.3",
     "react-chartjs-2": "^1.2.4",
     "react-datepicker": "^0.29.0",
+    "react-dates": "^10.1.1",
     "react-dd-menu": "^2.0.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
