--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-select": "^1.0.0-beta14",
+    "react-tooltip": "^3.3.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^4.0.0",
