--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bundle-dev": "webpack --define process.env.NODE_ENV='\"development\"' --progress",
     "bundle-prod": "webpack -p --define process.env.NODE_ENV='\"production\"' --progress",
     "start": "node server",
-    "test": "BABEL_JEST_STAGE=0 jest || true",
+    "test": "BABEL_JEST_STAGE=0 nyc jest || true",
     "watch": "webpack --define process.env.NODE_ENV='\"development\"' --progress --watch"
   },
   "repository": "https://github.com/jrsowles/ttpm-ui",
@@ -20,13 +20,11 @@
     "babel-eslint": "^6.1.2",
     "babel-jest": "^16.0.0",
     "babel-loader": "^6.2.5",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-plugin-istanbul": "^4.1.1",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2016": "^6.11.3",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-stage-2": "^6.13.0",
     "babel-root-import": "^4.1.3",
     "babel-runtime": "^6.11.6",
     "bootstrap-sass": "^3.3.7",
@@ -43,6 +41,7 @@
     "jest-cli": "^16.0.1",
     "jsx-loader": "^0.13.2",
     "node-sass": "^3.8.0",
+    "nyc": "^10.2.0",
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.3.2",
     "sass-loader": "^4.0.0",
@@ -54,16 +53,12 @@
   },
   "dependencies": {
     "connect": "^3.6.0",
-    "flexbox-react": "^4.0.0",
     "lodash": "^4.15.0",
     "moment": "^2.15.1",
     "prop-types": "^15.5.8",
-    "rc-collapse": "^1.6.6",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-shallow-compare": "^15.5.2",
-    "react-bootstrap": "^0.30.3",
-    "react-chartjs-2": "^1.2.4",
     "react-datepicker": "^0.29.0",
     "react-dates": "^10.1.1",
     "react-dd-menu": "^2.0.0",
@@ -72,8 +67,8 @@
     "react-dom": "^15.5.4",
     "react-grid-layout": "^0.13.5",
     "react-redux": "^4.4.5",
-    "react-router": "^2.7.0",
-    "react-select": "^1.0.0-beta14",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-tooltip": "^3.3.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
