tests: add test coverage flag in Jest, remove nyc

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bundle-dev": "webpack --define process.env.NODE_ENV='\"development\"' --progress",
     "bundle-prod": "webpack -p --define process.env.NODE_ENV='\"production\"' --progress",
     "start": "node server",
-    "test": "BABEL_JEST_STAGE=0 nyc jest || true",
+    "test": "BABEL_JEST_STAGE=0 jest --coverage || true",
     "watch": "webpack --define process.env.NODE_ENV='\"development\"' --progress --watch"
   },
   "repository": "https://github.com/jrsowles/ttpm-ui",
@@ -25,6 +25,7 @@
     "babel-preset-es2016": "^6.11.3",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-root-import": "^4.1.3",
     "babel-runtime": "^6.11.6",
     "bootstrap-sass": "^3.3.7",
@@ -41,7 +42,6 @@
     "jest-cli": "^16.0.1",
     "jsx-loader": "^0.13.2",
     "node-sass": "^3.8.0",
-    "nyc": "^10.2.0",
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.3.2",
     "sass-loader": "^4.0.0",
