--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.13.2",
-    "babel-eslint": "^6.1.2",
-    "babel-jest": "^16.0.0",
-    "babel-loader": "^6.2.5",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^19.0.0",
+    "babel-loader": "^7.0.0",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2016": "^6.11.3",
@@ -30,54 +30,54 @@
     "babel-runtime": "^6.11.6",
     "bootstrap-sass": "^3.3.7",
     "concurrently": "^3.1.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.28.0",
     "eslint": "^3.3.1",
     "eslint-config-defaults": "^9.0.0",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.1.2",
     "html-webpack-plugin": "^2.22.0",
-    "jest": "^16.0.1",
-    "jest-cli": "^16.0.1",
+    "jest": "^19.0.2",
+    "jest-cli": "^19.0.2",
     "jsx-loader": "^0.13.2",
-    "node-sass": "^3.8.0",
+    "node-sass": "^4.5.2",
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.3.2",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^6.0.3",
     "scss": "^0.2.4",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.16.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2",
-    "webpack-livereload-plugin": "^0.8.2"
+    "webpack-livereload-plugin": "^0.11.0"
   },
   "dependencies": {
     "connect": "^3.6.0",
     "lodash": "^4.15.0",
-    "moment": "^2.15.1",
+    "moment": "2.15.1",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-shallow-compare": "^15.5.2",
-    "react-datepicker": "^0.29.0",
     "react-dates": "^10.1.1",
     "react-dd-menu": "^2.0.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.5.4",
-    "react-redux": "^4.4.5",
+    "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tooltip": "^3.3.0",
     "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
+    "redux-logger": "^3.0.1",
     "redux-promise-middleware": "^4.0.0",
     "redux-thunk": "^2.1.0",
     "serve-static": "^1.12.1",
-    "superagent": "^2.2.0",
+    "superagent": "^3.5.2",
     "superagent-auth-bearer": "0.0.1",
     "underscore": "^1.8.3"
   },
+  "peerDependencies": {},
   "babel": {
     "presets": [
       "react",
