--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.1.2",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.22.0",
     "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
